--- a/private.html
+++ b/private.html
@@ -3398,8 +3398,8 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 <dt id="printSlimNumber"><a name="printSlimNumber,string,string,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printSlimNumber</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">anumber</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">fgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span> <span class="Identifier">bgr</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">black</span><span class="Other">;</span>
                      <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printBigNumber</p>
-<p>prints an string in big block font</p>
+<p>printSlimNumber</p>
+<p>prints an string in big slim font</p>
 <p>available chars 123456780,.:</p>
 <p>usufull for big counter etc , a clock can also be build easily but running in a tight while loop just uses up cpu cycles needlessly.</p>
 <pre class = "listing"><span class="Keyword">for</span> <span class="Identifier">x</span> <span class="Keyword">in</span> <span class="FloatNumber">990.</span><span class="Operator">.</span> <span class="DecNumber">1005</span><span class="Punctuation">:</span>
@@ -3607,8 +3607,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <dt id="getRandomFloat"><a name="getRandomFloat,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomFloat</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span></pre></dt>
 <dd>
 <p>getRandomFloat</p>
-<p>convenience proc so we do not need to import random</p>
-<p>in calling prog</p>
+<p>convenience proc so we do not need to import random in calling prog</p>
 
 
 </dd>
@@ -3992,7 +3991,7 @@ msgX templates convenience templates for colored text output the assumption is t
 <dt id="loopy"><a name="loopy.t,T,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">loopy</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">ite</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">st</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>loopy</p>
-<p>the lazy programmer's quick for-loop template</p>
+<p>the lazy programmer's quick simple for-loop template</p>
 <pre class = "listing"><span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="DecNumber">100</span><span class="Punctuation">,</span><span class="Identifier">printLnTK</span><span class="Punctuation">(</span><span class="StringLit">&quot;The house is in the back.&quot;</span><span class="Punctuation">,</span><span class="Identifier">brightwhite</span><span class="Punctuation">,</span><span class="Identifier">brightblack</span><span class="Punctuation">,</span><span class="Identifier">salmon</span><span class="Punctuation">,</span><span class="Identifier">yellowgreen</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
@@ -4006,7 +4005,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-20 15:25:31 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-20 19:57:46 UTC</small>
       </div>
     </div>
   </div>
