--- a/private.html
+++ b/private.html
@@ -1833,6 +1833,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="flyNim*(astring: string = &quot;Fly Nim&quot;; col: string = red; tx: float = 0.08&#x27;f64)"><wbr />fly<wbr />Nim</a></li>
   <li><a class="reference" href="#centerNim,"
     title="centerNim*()"><wbr />center<wbr />Nim</a></li>
+  <li><a class="reference" href="#printNimSx,string,int"
+    title="printNimSx*(col: string = yellowgreen; xpos: int = 1)"><wbr />print<wbr />Nim<wbr />Sx</a></li>
   <li><a class="reference" href="#movNim,"
     title="movNim*()"><wbr />mov<wbr />Nim</a></li>
   <li><a class="reference" href="#qqTop,"
@@ -3867,9 +3869,21 @@ fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
 
 
 </dd>
+<dt id="printNimSx"><a name="printNimSx,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printNimSx</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printNimSx</p>
+<p>prints large Nim</p>
+
+
+</dd>
 <dt id="movNim"><a name="movNim,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">movNim</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
-
+moving NIM demo<pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span>
+<span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">yellowgreen</span><span class="Punctuation">,</span><span class="DecNumber">170</span><span class="Punctuation">)</span>
+<span class="Identifier">clearup</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">movNim</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">salmon</span><span class="Punctuation">)</span>
+<span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="qqTop"><a name="qqTop,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">qqTop</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
@@ -4071,7 +4085,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-24 15:45:19 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-24 16:55:30 UTC</small>
       </div>
     </div>
   </div>
