--- a/private.html
+++ b/private.html
@@ -1719,6 +1719,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="cechoLn*(col: string; ggg: varargs[string, `$`] = @ [&quot;&quot;])"><wbr />cecho<wbr />Ln</a></li>
   <li><a class="reference" href="#showColors,"
     title="showColors*()"><wbr />show<wbr />Colors</a></li>
+  <li><a class="reference" href="#doty,int,string"
+    title="doty*(d: int; col: string = white; bgr = black)"><wbr />doty</a></li>
+  <li><a class="reference" href="#dotyLn,int,string"
+    title="dotyLn*(d: int; col: string = white; bgr = black)"><wbr />doty<wbr />Ln</a></li>
   <li><a class="reference" href="#validdate,string"
     title="validdate*(adate: string): bool"><wbr />validdate</a></li>
   <li><a class="reference" href="#day,string"
@@ -3381,6 +3385,27 @@ forward declaration
 
 
 </dd>
+<dt id="doty"><a name="doty,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doty</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span> <span class="Identifier">bgr</span> <span class="Other">=</span> <span class="Identifier">black</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>doty</p>
+<p>prints number d of ⏺  style dots in given fore/background color</p>
+<p>each dot is of char length 3</p>
+<pre class = "listing">import private
+printLnBiCol(&quot;Test for  :  doty\n&quot;,&quot;:&quot;,truetomato,lime)
+dotyLn(22 ,lime)
+dotyLn(18 ,salmon,blue)</pre><p>color clrainbow is not supported and will be in white </p>
+
+
+</dd>
+<dt id="dotyLn"><a name="dotyLn,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dotyLn</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span> <span class="Identifier">bgr</span> <span class="Other">=</span> <span class="Identifier">black</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>dotyLn</p>
+<p>prints number d of ⏺  style dots given fore/background color and issues new line</p>
+<p>each dot is of char length 3</p>
+<p>color clrainbow is not supported and will be in white</p>
+
+
+</dd>
 <dt id="validdate"><a name="validdate,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">validdate</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
 <dd>
 <p>validdate</p>
@@ -4136,7 +4161,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-25 15:42:25 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-26 14:32:00 UTC</small>
       </div>
     </div>
   </div>
