--- a/private.html
+++ b/private.html
@@ -1168,14 +1168,6 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   </ul>
 </li>
 <li>
-  <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
-  <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#tw"
-    title="tw* = getTerminalWidth()"><wbr />tw</a></li>
-
-  </ul>
-</li>
-<li>
   <a class="reference reference-toplevel" href="#9" id="59">Lets</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#colorNames"
@@ -1269,6 +1261,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
          &quot;\xF0\x9F\x83\x9D&quot;, &quot;\xF0\x9F\x82\xAE&quot;, &quot;\xF0\x9F\x82\xBE&quot;,
          &quot;\xF0\x9F\x83\x8E&quot;, &quot;\xF0\x9F\x83\x9E&quot;, &quot;\xF0\x9F\x82\xA0&quot;,
          &quot;\xF0\x9F\x82\xBF&quot;, &quot;\xF0\x9F\x83\x8F&quot;, &quot;\xF0\x9F\x83\x9F&quot;]"><wbr />cards</a></li>
+  <li><a class="reference" href="#rxCards"
+    title="rxCards* = toSeq(cards.low .. cards.high)"><wbr />rx<wbr />Cards</a></li>
   <li><a class="reference" href="#start"
     title="start* = epochTime()"><wbr />start</a></li>
 
@@ -1699,8 +1693,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="curBk*(x: int = 1)"><wbr />cur<wbr />Bk</a></li>
   <li><a class="reference" href="#curFw,int"
     title="curFw*(x: int = 1)"><wbr />cur<wbr />Fw</a></li>
-  <li><a class="reference" href="#curSet,int"
-    title="curSet*(x: int)"><wbr />cur<wbr />Set</a></li>
+  <li><a class="reference" href="#curSetx,int"
+    title="curSetx*(x: int)"><wbr />cur<wbr />Setx</a></li>
+  <li><a class="reference" href="#curSet,int,int"
+    title="curSet*(x: int; y: int)"><wbr />cur<wbr />Set</a></li>
   <li><a class="reference" href="#clearup,int"
     title="clearup*(x: int = 80)"><wbr />clearup</a></li>
   <li><a class="reference" href="#clearLine,"
@@ -1833,6 +1829,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="createSeqFloat*(n: int = 10): seq[float]"><wbr />create<wbr />Seq<wbr />Float</a></li>
   <li><a class="reference" href="#getRandomPointInCircle,float"
     title="getRandomPointInCircle*(radius: float): seq[float]"><wbr />get<wbr />Random<wbr />Point<wbr />In<wbr />Circle</a></li>
+  <li><a class="reference" href="#getCard,"
+    title="getCard*(): auto"><wbr />get<wbr />Card</a></li>
   <li><a class="reference" href="#centerMark,bool"
     title="centerMark*(showpos: bool = false)"><wbr />center<wbr />Mark</a></li>
   <li><a class="reference" href="#tupleToStr,"
@@ -1871,8 +1869,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="fastsplit*(s: string; sep: char): seq[string]"><wbr />fastsplit</a></li>
   <li><a class="reference" href="#splitty,string,string"
     title="splitty*(txt: string; sep: string): seq[string]"><wbr />splitty</a></li>
-  <li><a class="reference" href="#futureIsNim,int"
-    title="futureIsNim*(posx: int = 0)"><wbr />future<wbr />Is<wbr />Nim</a></li>
+  <li><a class="reference" href="#futureIsNimDemo,int"
+    title="futureIsNimDemo*(posx: int = 0)"><wbr />future<wbr />Is<wbr />Nim<wbr />Demo</a></li>
   <li><a class="reference" href="#flyNim,string,string,float"
     title="flyNim*(astring: string = &quot;Fly Nim&quot;; col: string = red; tx: float = 0.08&#x27;f64)"><wbr />fly<wbr />Nim</a></li>
   <li><a class="reference" href="#centerNim,"
@@ -1881,8 +1879,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printNimSx*(col: string = yellowgreen; xpos: int = 1)"><wbr />print<wbr />Nim<wbr />Sx</a></li>
   <li><a class="reference" href="#movNim,"
     title="movNim*()"><wbr />mov<wbr />Nim</a></li>
-  <li><a class="reference" href="#randomCards,"
-    title="randomCards*()"><wbr />random<wbr />Cards</a></li>
+  <li><a class="reference" href="#randomCardsDemo,"
+    title="randomCardsDemo*()"><wbr />random<wbr />Cards<wbr />Demo</a></li>
   <li><a class="reference" href="#qqTop,"
     title="qqTop*()"><wbr />qq<wbr />Top</a></li>
   <li><a class="reference" href="#doInfo,"
@@ -1917,7 +1915,9 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <li>
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#msgg.t,stmt"
+      <li><a class="reference" href="#tw.t,"
+    title="tw*(): int"><wbr />tw</a></li>
+  <li><a class="reference" href="#msgg.t,stmt"
     title="msgg*(code: stmt): stmt"><wbr />msgg</a></li>
   <li><a class="reference" href="#msggb.t,stmt"
     title="msggb*(code: stmt): stmt"><wbr />msggb</a></li>
@@ -1968,7 +1968,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>License     : MIT opensource</p>
 <p>Version     : 0.9.1</p>
 <p>ProjectStart: 2015-06-20</p>
-<p>Compiler    : Nim 0.11.3 dev</p>
+<p>Compiler    : Nim 0.12.0 dev</p>
 <p>OS          : Linux</p>
 <p>Description : private.nim is a public library with a collection of simple procs and templates</p>
 <blockquote><p><p>for easy colored display in a linux terminal , date handling and more</p>
@@ -1994,16 +1994,6 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <dt id="PStyle"><a name="PStyle"></a><pre><span class="Identifier">PStyle</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">terminal</span><span class="Other">.</span><span class="Identifier">Style</span></pre></dt>
 <dd>
 make terminal style constants available in the calling prog
-
-</dd>
-
-</dl></div>
-<div class="section" id="8">
-<h1><a class="toc-backref" href="#8">Vars</a></h1>
-<dl class="item">
-<dt id="tw"><a name="tw"></a><pre><span class="Identifier">tw</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">getTerminalWidth</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
-<dd>
-terminalwidth available in tw
 
 </dd>
 
@@ -2106,6 +2096,11 @@ terminalwidth available in tw
          <span class="StringLit">&quot;\xF0\x9F\x82\xBF&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;\xF0\x9F\x83\x8F&quot;</span><span class="Other">,</span> <span class="StringLit">&quot;\xF0\x9F\x83\x9F&quot;</span><span class="Other">]</span></pre></dt>
 <dd>
 
+
+</dd>
+<dt id="rxCards"><a name="rxCards"></a><pre><span class="Identifier">rxCards</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">toSeq</span><span class="Other">(</span><span class="Identifier">cards</span><span class="Other">.</span><span class="Identifier">low</span> <span class="Operator">..</span> <span class="Identifier">cards</span><span class="Other">.</span><span class="Identifier">high</span><span class="Other">)</span></pre></dt>
+<dd>
+index into cards
 
 </dd>
 <dt id="start"><a name="start"></a><pre><span class="Identifier">start</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">epochTime</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
@@ -3042,7 +3037,8 @@ check execution timing with one line see doFinish
 <dd>
 <p>randCol</p>
 <p>get a randomcolor from colorNames</p>
-<pre class = "listing"><span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span><span class="DecNumber">5</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Hello Random Color&quot;</span><span class="Punctuation">,</span><span class="Identifier">randCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
+<pre class = "listing"><span class="Comment"># print a string 6 times in a random color selected from colorNames</span>
+<span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span><span class="DecNumber">5</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Hello Random Color&quot;</span><span class="Punctuation">,</span><span class="Identifier">randCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="getTerminalWidth"><a name="getTerminalWidth,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getTerminalWidth</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
@@ -3200,10 +3196,17 @@ forward declaration
 
 
 </dd>
-<dt id="curSet"><a name="curSet,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">curSet</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
+<dt id="curSetx"><a name="curSetx,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">curSetx</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>curSetx</p>
+<p>mirrors terminal setCursorXPos</p>
+
+
+</dd>
+<dt id="curSet"><a name="curSet,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">curSet</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>curSet</p>
-<p>mirrors terminal setCursorXPos</p>
+<p>mirrors terminal setCursorPos</p>
 
 
 </dd>
@@ -3223,6 +3226,8 @@ forward declaration
 </dd>
 <dt id="sleepy"><a name="sleepy,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
+<p>sleepy</p>
+<p>imitates sleep but in seconds </p>
 
 
 </dd>
@@ -3851,6 +3856,15 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
+<dt id="getCard"><a name="getCard,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getCard</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span></pre></dt>
+<dd>
+<p>getCard</p>
+<p>gets a random card from the Cards seq</p>
+<pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span>
+<span class="Identifier">printPos</span><span class="Punctuation">(</span><span class="Identifier">getCard</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">randCol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="Identifier">tw</span> <span class="Keyword">div</span> <span class="DecNumber">2</span><span class="Punctuation">)</span>  <span class="Comment"># get card and print in random color at xpos</span>
+<span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
+
+</dd>
 <dt id="centerMark"><a name="centerMark,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">centerMark</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">showpos</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>centerMark</p>
@@ -4020,7 +4034,7 @@ fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
 
 
 </dd>
-<dt id="futureIsNim"><a name="futureIsNim,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">futureIsNim</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">posx</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt id="futureIsNimDemo"><a name="futureIsNimDemo,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">futureIsNimDemo</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">posx</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>futureIsNim</p>
 <p>demo example of a box drawn with doty procs and 2 text lines</p>
@@ -4060,14 +4074,14 @@ fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
 <p>movNim</p>
 <p>Demo moving Nim</p>
 <pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span>
-<span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">yellowgreen</span><span class="Punctuation">,</span><span class="DecNumber">170</span><span class="Punctuation">)</span>
-<span class="Identifier">clearup</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
 <span class="Identifier">movNim</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
 <span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">salmon</span><span class="Punctuation">)</span>
+<span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">lime</span><span class="Punctuation">,</span><span class="DecNumber">55</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="randomCards"><a name="randomCards,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">randomCards</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
+<dt id="randomCardsDemo"><a name="randomCardsDemo,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">randomCardsDemo</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>randomCards</p>
 <p>Demo for colorful cards deck ...</p>
@@ -4146,6 +4160,11 @@ lifted from terminal.nim and removed new line used in printStyled
 <div class="section" id="18">
 <h1><a class="toc-backref" href="#18">Templates</a></h1>
 <dl class="item">
+<dt id="tw"><a name="tw.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">tw</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
+<dd>
+latest terminalwidth always available in tw
+
+</dd>
 <dt id="msgg"><a name="msgg.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgg</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
 <dd>
 msgX templates convenience templates for colored text output the assumption is that the terminal is white text and black background naming of the templates is like msg+color so msgy =&gt; yellow use like : msgg() do : echo &quot;How nice, it's in green&quot; these templates have by large been superceded by various print and echo procs but are useful to have ins ome circumstances like draw a yellow line with width 40<pre class = "listing"><span class="Identifier">msgy</span><span class="Punctuation">(</span><span class="Punctuation">)</span> <span class="Keyword">do</span><span class="Punctuation">:</span> <span class="Identifier">echo</span> <span class="StringLit">&quot;yellow&quot;</span></pre>
@@ -4288,7 +4307,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-27 23:07:29 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-28 22:42:25 UTC</small>
       </div>
     </div>
   </div>
