--- a/private.html
+++ b/private.html
@@ -4253,7 +4253,7 @@ latest terminalwidth always available in tw
 </dd>
 <dt id="th"><a name="th.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">th</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
-latest terminalwidth always available in th
+latest terminalheight always available in th
 
 </dd>
 <dt id="msgg"><a name="msgg.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgg</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
@@ -4398,7 +4398,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-01 19:19:04 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-01 19:21:32 UTC</small>
       </div>
     </div>
   </div>
