--- a/private.html
+++ b/private.html
@@ -4123,16 +4123,16 @@ fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
     <span class="Identifier">centerMark</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
     <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
     <span class="Identifier">sleepy</span><span class="Punctuation">(</span><span class="FloatNumber">0.1</span><span class="Punctuation">)</span>
-<span class="Identifier">flyNim</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
-<span class="Identifier">futureisnim</span><span class="Punctuation">(</span><span class="DecNumber">25</span><span class="Punctuation">)</span></pre>
+<span class="Identifier">flyNimDemo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">futureIsNimDemo</span><span class="Punctuation">(</span><span class="DecNumber">25</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="flyNimDemo"><a name="flyNimDemo,string,string,float"></a><pre><span class="Keyword">proc</span> <span class="Identifier">flyNimDemo</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;Fly Nim&quot;</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">red</span><span class="Other">;</span> <span class="Identifier">tx</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Other">=</span> <span class="FloatNumber">0.08'f64</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>flyNim</p>
 <p>small animation demo</p>
-<pre class = "listing"><span class="Identifier">flyNim</span><span class="Punctuation">(</span><span class="Identifier">col</span> <span class="Operator">=</span> <span class="Identifier">brightred</span><span class="Punctuation">)</span>
-<span class="Identifier">flyNim</span><span class="Punctuation">(</span><span class="StringLit">&quot; Have a nice day !&quot;</span><span class="Punctuation">,</span> <span class="Identifier">col</span> <span class="Operator">=</span> <span class="Identifier">hotpink</span><span class="Punctuation">,</span><span class="Identifier">tx</span> <span class="Operator">=</span> <span class="FloatNumber">0.1</span><span class="Punctuation">)</span></pre>
+<pre class = "listing"><span class="Identifier">flyNimDemo</span><span class="Punctuation">(</span><span class="Identifier">col</span> <span class="Operator">=</span> <span class="Identifier">brightred</span><span class="Punctuation">)</span>
+<span class="Identifier">flyNimDemo</span><span class="Punctuation">(</span><span class="StringLit">&quot; Have a nice day !&quot;</span><span class="Punctuation">,</span> <span class="Identifier">col</span> <span class="Operator">=</span> <span class="Identifier">hotpink</span><span class="Punctuation">,</span><span class="Identifier">tx</span> <span class="Operator">=</span> <span class="FloatNumber">0.1</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="centerNimDemo"><a name="centerNimDemo,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">centerNimDemo</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
@@ -4153,7 +4153,7 @@ fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
 <p>Demo moving Nim</p>
 <pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
-<span class="Identifier">movNim</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<span class="Identifier">movNimDemo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
 <span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">salmon</span><span class="Punctuation">)</span>
 <span class="Identifier">printNimSx</span><span class="Punctuation">(</span><span class="Identifier">lime</span><span class="Punctuation">,</span><span class="DecNumber">55</span><span class="Punctuation">)</span>
 <span class="Identifier">doFinish</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
@@ -4398,7 +4398,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-01 19:21:32 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-01 19:24:55 UTC</small>
       </div>
     </div>
   </div>
