--- a/private.html
+++ b/private.html
@@ -1702,7 +1702,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <li><a class="reference" href="#cow"
     title="cow* = &quot;\xF0\x9F\x90\xAE&quot;"><wbr />cow</a></li>
   <li><a class="reference" href="#wideDot"
-    title="wideDot* = &quot;\xE2\x8F\xBA &quot;"><wbr />wide<wbr />Dot</a></li>
+    title="wideDot* = &quot;\xE2\x9A\xAB&quot; &amp; &quot; &quot;"><wbr />wide<wbr />Dot</a></li>
 
   </ul>
 </li>
@@ -3255,7 +3255,7 @@ check execution timing with one line see doFinish
 
 
 </dd>
-<dt id="wideDot"><a name="wideDot"></a><pre><span class="Identifier">wideDot</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x8F\xBA &quot;</span></pre></dt>
+<dt id="wideDot"><a name="wideDot"></a><pre><span class="Identifier">wideDot</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x9A\xAB&quot;</span> <span class="Operator">&amp;</span> <span class="StringLit">&quot; &quot;</span></pre></dt>
 <dd>
 
 
@@ -4535,7 +4535,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-07 18:55:16 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-07 22:11:29 UTC</small>
       </div>
     </div>
   </div>
